Componente alets adicionado

--- a/src/app/ongs/ongs.component.html
+++ b/src/app/ongs/ongs.component.html
@@ -1,124 +1,118 @@
-<body>
+<div class="container">
 
-    <br>
+  <div class="row d-flex justify-content-center my-5">
+    <h1>ONGs PARCEIRAS</h1>
+  </div>
 
-    <div class="row d-flex justify-content-center">
-        <h1>ONGs PARCEIRAS</h1>
-    </div>
+  <div class=" mb-3" style="max-width: 1300px;">
+    <div class="row d-flex align-items-center">
+      <div class="col-md-4">
+        <img src="https://i.imgur.com/WHrpc1s.png" class="img-fluid" alt="...">
+      </div>
+      <div class="col-md-8 justify-content-space-between">
 
-    <br>
+        <div class="card-body">
+          <h5 class="card-title my-4">NatuSkin Cosmétics:</h5>
+          <p class="card-text text-justify">Acreditamos que é possível cuidar de nós sem agredir o meio
+            ambiente, por isso nós da NatuSkin Cosmetics, criamos produtos ficados no autocuidado
+            tendo em sua composição apenas ingredientes orgânicos, nossas ideologias também refletem
+            nas embalagens de nossos produtos, sendo plástico e papel reciclável.
+            As ervas que usamos na produção de cada produto, são cultivadas em nossos espaços.
+            Comprando nossos produtos você contribui para manter nosso micro produtores parceiros
+            engajados na missão de sustentabilidade, 50% do lucro adquirido é revertido para ONGs
+            que apoiam catadores de recicláveis.
+          </p>
 
- <div class="container">
-    <div class=" mb-3" style="max-width: 1300px;">
-        <div class="row ">
-          <div class="col-md-4">
-            <img src="https://i.imgur.com/WHrpc1s.png" class="img" alt="...">
-          </div>
-          <div class="col-md-8 justify-content-space-between">
-            
-            <div class="card-body">
-              <h5 class="card-title">NatuSkin Cosmétics:</h5>
-              <p class="card-text">Acreditamos que é possível cuidar de nós sem agredir o meio 
-                ambiente, por isso nós da NatuSkin Cosmetics, criamos produtos ficados no autocuidado 
-                tendo em sua composição apenas ingredientes orgânicos, nossas ideologias também refletem 
-                nas embalagens de nossos produtos, sendo plástico e papel reciclável.
-                As ervas que usamos na produção de cada produto, são cultivadas em nossos espaços. 
-                Comprando nossos produtos você contribui para manter nosso micro produtores parceiros 
-                engajados na missão de sustentabilidade, 50% do lucro adquirido é revertido para ONGs 
-                que apoiam catadores de recicláveis.
-            </p>
-            <a class="btn btn text-white" style="background-color:#366A55;" href="">Acessar Produtos</a>
-                        <a class="btn btn" style="background-color:#DCB14E;" href="">Fazer Doação</a>
-            
-            </div>
-          </div>
+          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
+
         </div>
+      </div>
     </div>
+  </div>
 
-    <hr>
+  <hr>
 
-        <div class=" mb-3" style="max-width: 1300px;">
-            <div class="row ">
-              <div class="col-md-4">
-                <img src="https://i.imgur.com/QsyF2xb.png" class="img" alt="...">
-              </div>
-              <div class="col-md-8 justify-content-space-between">
-                
-                <div class="card-body">
-                  <h5 class="card-title">Reciclando e Alimentando:</h5>
-                  <p class="card-text">Cooperativa que atua nas causas ambientais, sua missão é coletar,
-                     reutilizar e converter suas ações em recursos para a população local. Através desse 
-                     projeto é possível prestar assistência a famílias de baixa renda com o fornecimento 
-                     de sestas básicas e ao mesmo tempo ajudar o meio ambiente.
-                    Temos como diferencial a sustentabilidade referente as causas ambientais, e a 
-                    conscientização social voltada para problemas como desigualdade e a extrema pobreza.
-                    
-                </p>
-                <a class="btn btn text-white" style="background-color:#366A55;" href="">Acessar Produtos</a>
-                        <a class="btn btn" style="background-color:#DCB14E;" href="">Fazer Doação</a>
-                
-                </div>
-              </div>
-            </div>
+  <div class=" mb-3" style="max-width: 1300px;">
+    <div class="row d-flex align-items-center">
+      <div class="col-md-4">
+        <img src="https://i.imgur.com/QsyF2xb.png" class="img-fluid" alt="...">
+      </div>
+      <div class="col-md-8 justify-content-space-between">
+
+        <div class="card-body">
+          <h5 class="card-title my-4">Reciclando e Alimentando:</h5>
+          <p class="card-text text-justify">Cooperativa que atua nas causas ambientais, sua missão é coletar,
+            reutilizar e converter suas ações em recursos para a população local. Através desse
+            projeto é possível prestar assistência a famílias de baixa renda com o fornecimento
+            de sestas básicas e ao mesmo tempo ajudar o meio ambiente.
+            Temos como diferencial a sustentabilidade referente as causas ambientais, e a
+            conscientização social voltada para problemas como desigualdade e a extrema pobreza.
+          </p>
+
+          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
+
         </div>
+      </div>
+    </div>
+  </div>
 
-        <hr>
+  <hr>
 
-    
-            <div class=" mb-3" style="max-width: 1300px;">
-                <div class="row ">
-                  <div class="col-md-4">
-                    <img src="https://i.imgur.com/O8KQQGJ.png" class="img" alt="...">
-                  </div>
-                  <div class="col-md-8 justify-content-space-between">
-                    
-                    <div class="card-body">
-                      <h5 class="card-title">ECOnsciente:</h5>
-                      <p class="card-text">Somos uma Ong que apoia os pequenos empreendedores da área 
-                        agrícola e artesanal, nossa meta é promover maior visibilidade de seus produtos 
-                        no mercado, permitindo assim a inclusão dos mesmos em um cenário econômico muito 
-                        competitivo. 
-                        Desta forma buscamos estimular a economia local, impactando também no desenvolvimento 
-                        e gerando maior fonte de renda para as famílias envolvidas. 
-                    </p>
-                    <a class="btn btn text-white" style="background-color:#366A55;" href="">Acessar Produtos</a>
-                        <a class="btn btn" style="background-color:#DCB14E;" href="">Fazer Doação</a>
-                    
-                    </div>
-                  </div>
-                </div>
-            </div>
+  <div class=" mb-3" style="max-width: 1300px;">
+    <div class="row d-flex align-items-center">
+      <div class="col-md-4">
+        <img src="https://i.imgur.com/O8KQQGJ.png" class="img-fluid" alt="...">
+      </div>
+      <div class="col-md-8 justify-content-space-between">
 
-            <hr>
+        <div class="card-body">
+          <h5 class="card-title my-4">ECOnsciente:</h5>
+          <p class="card-text text-justify">Somos uma Ong que apoia os pequenos empreendedores da área
+            agrícola e artesanal, nossa meta é promover maior visibilidade de seus produtos
+            no mercado, permitindo assim a inclusão dos mesmos em um cenário econômico muito
+            competitivo.
+            Desta forma buscamos estimular a economia local, impactando também no desenvolvimento
+            e gerando maior fonte de renda para as famílias envolvidas.
+          </p>
 
-            
-                <div class=" mb-3" style="max-width: 1300px;">
-                    <div class="row ">
-                      <div class="col-md-4">
-                        <img src="https://i.imgur.com/bQCc2sj.png" class="img" alt="...">
-                      </div>
-                      <div class="col-md-8 justify-content-space-between">
-                        
-                        <div class="card-body">
-                          <h5 class="card-title">ECO+VEST:</h5>
-                          <p class="card-text">Moda sustentável é a nossa missão, acreditamos em um 
-                            futuro onde seja possível viver sem agredir o meio ambiente. 
-                            As peças ECO+VEST são compostas por 50% garrafa pet reciclado e 50% algodão. 
-                            Tecidos leves, confortáveis e de alta durabilidade, todas confeccionadas a 
-                            mão por voluntários. Nossa marca depende exclusivamente de doações e 
-                            patrocinadores locais. 100% do lucro adquirido com a venda dos produtos é 
-                            onvertido em sestas básicas para famílias de baixa renda.
-                            Seu apoio é muito importante para manter esse projeto, pois juntos podemos 
-                            mudar o mundo.
-                            
-                        </p>
-                        <a class="btn btn text-white" style="background-color:#366A55;" href="">Acessar Produtos</a>
-                        <a class="btn btn" style="background-color:#DCB14E;" href="">Fazer Doação</a>
-                        
-                        </div>
-                      </div>
-                    </div>
-                </div>
+          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
 
-        
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class=" mb-3" style="max-width: 1300px;">
+    <div class="row d-flex align-items-center">
+      <div class="col-md-4">
+        <img src="https://i.imgur.com/bQCc2sj.png" class="img-fluid" alt="...">
+      </div>
+      <div class="col-md-8 justify-content-space-between">
+
+        <div class="card-body">
+          <h5 class="card-title my-4">ECO+VEST:</h5>
+          <p class="card-text text-justify">Moda sustentável é a nossa missão, acreditamos em um
+            futuro onde seja possível viver sem agredir o meio ambiente.
+            As peças ECO+VEST são compostas por 50% garrafa pet reciclado e 50% algodão.
+            Tecidos leves, confortáveis e de alta durabilidade, todas confeccionadas a
+            mão por voluntários. Nossa marca depende exclusivamente de doações e
+            patrocinadores locais. 100% do lucro adquirido com a venda dos produtos é
+            onvertido em sestas básicas para famílias de baixa renda.
+            Seu apoio é muito importante para manter esse projeto, pois juntos podemos
+            mudar o mundo.
+          </p>
+
+          <button class="btn-green-md mt-3 mr-3">Acessar Produtos</button>
+          <button class="btn-cancel-md mt-3 mr-2">Fazer Doação</button>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
