--- a/src/app/produtos/produtos.component.html
+++ b/src/app/produtos/produtos.component.html
@@ -41,24 +41,20 @@
                     <hr class="linhas-titulo mb-1 mt-0">
 
                     <form>
-                        <div class="form-group d-flex align-content-end">
-                            <!-- <input type="range" class="form-control-range" id="formControlRange"> -->
-                            <!-- <label class="d-flex justify-content-end text-range" for="rangeInput">preço R$ VarMin - R$max</label> -->
-                            
-                            <div class="form-control align-content-lg-around">
-                                <input type="number" class="form-control mb-3" [(ngModel)]="precoInicio">
-                                <input type="number" class="form-control mb-3" [(ngModel)]="precoFinal">
+                        <div class="input-group align-content-end">
+                            <div class="input-group">
+                                <input type="number" aria-label="Preço Inicial" class="form-control"
+                                    [(ngModel)]="precoInicio" placeholder="Valor Inicial">
+                                <input type="number" aria-label="Preço Final" class="form-control"
+                                    [(ngModel)]="precoFinal" placeholder="Valor Final">
                             </div>
 
-                            <div class="d-flex align-content-end align-items-end">
+                            <div class="d-flex align-content-end">
+                                <button class="btn-cancel-sm" (click)="clearFiltro()">Limpar</button>
                                 <button class="btn-green-sm mr-2 mt-2" (click)="findProdutosByPreco()">Filtrar</button>
-                                <button class="btn-cancel-sm" (click)="getAllProdutos()">Limpar</button>
                             </div>
                         </div>
                     </form>
-
-                    <div class="d-flex align-content-end align-items-end">
-                    </div>
                     <!-- END -->
 
                     <!-- CHECK-BOXES -->
@@ -166,6 +162,5 @@
 
         </div>
     </div>
-
-
 </div>
+
