--- a/src/styles.css
+++ b/src/styles.css
@@ -101,59 +101,68 @@
 
 
 /* BOTÕES PERSONALIZADOS */
-.btn-green {
-    background-color: #366A55;
-    color: white;
-    border-radius: 10px;
-    border: 0;
-    padding: 5px 15px;
-}
 
-.btn-green:hover {
-    background-color: #2C5746;
-    transform: scale(1.03);
-}
-
-.btn-cancel {
-    background-color: #DCB14E;
-    color: white;
-    border-radius: 10px;
-    border: 0;
-    padding: 5px 15px;
-}
-
-.btn-cancel:hover {
-    background-color: #cea544;
-    transform: scale(1.03);
-}
-
-        /* BOTÃO GRANDE */
+/* BOTÃO GRANDE */
 .btn-green-gd {
     background-color: #366A55;
     color: white;
     border-radius: 15px;
-    border: 0;
+    border: none;
     padding: 10px 20px;
     font-size: 14pt;
+    outline: none !important;
 }
 
 .btn-green-gd:hover {
     background-color: #2C5746;
-    transform: scale(1.03);
+    border: none;
+    outline: none;
 }
 
 .btn-cancel-gd {
     background-color: #DCB14E;
-    color: white;
+    color: rgb(0, 0, 0);
     border-radius: 15px;
-    border: 0;
+    border: none;
     padding: 10px 20px;
     font-size: 14pt;
+    outline: none !important;
 }
 
 .btn-cancel-gd:hover {
     background-color: #cea544;
-    transform: scale(1.03);
+    outline: none;
+}
+
+/* BOTÃO MÉDIO */
+.btn-green-md {
+    background-color: #366A55;
+    color: white;
+    border-radius: 10px;
+    border: none;
+    padding: 8px 13px;
+    font-size: 11pt;
+    outline: none !important;
+}
+
+.btn-green-md:hover {
+    background-color: #2C5746;
+    outline: none;
+}
+
+.btn-cancel-md {
+    background-color: #DCB14E;
+    color: rgb(0, 0, 0);
+    border-radius: 10px;
+    border: none;
+    padding: 8px 13px;
+    font-size: 11pt;
+    outline: none !important;
+}
+
+.btn-cancel-md:hover {
+    background-color: #cea544;
+    outline: none;
 }
 
 /* BOTÃO PEQUENO */
@@ -161,29 +170,30 @@
     background-color: #366A55;
     color: white;
     border-radius: 10px;
-    border: 0;
+    border: none;
     padding: 5px 15px;
     font-size: 10pt;
+    outline: none !important;
 }
 
 .btn-green-sm:hover {
     background-color: #2C5746;
-    transform: scale(1.03);
+    outline: none;
 }
 
 .btn-cancel-sm {
     background-color: #DCB14E;
-    color: white;
+    color: rgb(0, 0, 0);
     border-radius: 10px;
-    border: 0;
+    border: none;
     padding: 5px 15px;
     font-size: 10pt;
-
+    outline: none !important;
 }
 
 .btn-cancel-sm:hover {
     background-color: #cea544;
-    transform: scale(1.03);
+    outline: none;
 }
 
 
@@ -225,6 +235,7 @@
     background-color: #2c5746;
     border-radius: 20px;
 }
+
 /* ====================FIM==================== */
 
 
