Adicionar página fundadores feita pela Juliana[B

--- a/src/app/fundadores/fundadores.component.html
+++ b/src/app/fundadores/fundadores.component.html
@@ -14,10 +14,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/ryHfGEx.png" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/7xdsb4C.jpg?1" alt="" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/lcyuPcs.png?1" alt=""
+                        <img class="img" src="https://i.imgur.com/HWXcXCF.jpg?1" alt=""
                             style="width:300px;height:300px;">
                     </div>
                 </div>
@@ -26,20 +26,19 @@
             <div class="d-flex justify-content-center m-0 p-0 ">
                 <ul class="social">
                     <li>
-                        <a href="https://www.linkedin.com/in/juliana-souza-46a36b197/" target="_blank">
+                        <a href="https://www.linkedin.com/in/betina-machado/" target="_blank">
                             <i class="bi bi-linkedin icon m-0"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/BetinaMachado" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora apaixonada pelo Back-end e estudante de Análise e
-                Desenvolvimento de Sistemas!</p>
+            <p class="card-text text-center">Desenvolvedora Java FullStack, Gaúcha, residindo em São Paulo/SP</p>
         </div>
 
 
@@ -47,10 +46,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/ryHfGEx.png" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/1DY7U9G.jpg?1" alt="" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/lcyuPcs.png?1" alt=""
+                        <img class="img" src="https://i.imgur.com/1DY7U9G.jpg?1" alt=""
                             style="width:300px;height:300px;">
                     </div>
                 </div>
@@ -59,20 +58,19 @@
             <div class="d-flex justify-content-center m-0 p-0 ">
                 <ul class="social">
                     <li>
-                        <a href="https://www.linkedin.com/in/juliana-souza-46a36b197/" target="_blank">
+                        <a href="https://www.linkedin.com/in/felipe-lopes-marques-3979b4208/" target="_blank">
                             <i class="bi bi-linkedin icon m-0"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/FelipeLopesMarques" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora apaixonada pelo Back-end e estudante de Análise e
-                Desenvolvimento de Sistemas!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack, determinado e criativo!</p>
         </div>
 
 
@@ -104,7 +102,7 @@
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora apaixonada pelo Back-end e estudante de Análise e
+            <p class="card-text text-center">Desenvolvedora Java apaixonada pelo Back-end e cursando Análise e
                 Desenvolvimento de Sistemas!</p>
         </div>
 
@@ -121,10 +119,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/ryHfGEx.png" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/s8RcI6y.png" alt="" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/lcyuPcs.png?1" alt=""
+                        <img class="img" src="https://i.imgur.com/qW9gArR.jpg?1" alt=""
                             style="width:300px;height:300px;">
                     </div>
                 </div>
@@ -133,20 +131,19 @@
             <div class="d-flex justify-content-center m-0 p-0 ">
                 <ul class="social">
                     <li>
-                        <a href="https://www.linkedin.com/in/juliana-souza-46a36b197/" target="_blank">
+                        <a href="https://www.linkedin.com/in/luiz-fabio-688587223/" target="_blank">
                             <i class="bi bi-linkedin icon m-0"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/LuizFabiodoCarmo" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora apaixonada pelo Back-end e estudante de Análise e
-                Desenvolvimento de Sistemas!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack, proativo e determinado!</p>
         </div>
 
 
@@ -154,10 +151,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/ryHfGEx.png" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/lTQ4TXJ.jpg?1" alt="" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/lcyuPcs.png?1" alt=""
+                        <img class="img" src="https://i.imgur.com/lTQ4TXJ.jpg?1" alt=""
                             style="width:300px;height:300px;">
                     </div>
                 </div>
@@ -166,20 +163,19 @@
             <div class="d-flex justify-content-center m-0 p-0">
                 <ul class="social">
                     <li>
-                        <a href="https://www.linkedin.com/in/juliana-souza-46a36b197/" target="_blank">
+                        <a href="https://www.linkedin.com/in/ta%C3%ADs-brito-costa-261940222/" target="_blank">
                             <i class="bi bi-linkedin icon m-0"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/TaisBritoCosta" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora apaixonada pelo Back-end e estudante de Análise e
-                Desenvolvimento de Sistemas!</p>
+            <p class="card-text text-center">Desenvolvedora Java FullStack, sou baiana, moro em São Paulo há 8 anos!</p>
         </div>
 
 
@@ -187,10 +183,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/ryHfGEx.png" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/MgHpfGU.png" alt="" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/lcyuPcs.png?1" alt=""
+                        <img class="img" src="https://i.imgur.com/MgHpfGU.png" alt=""
                             style="width:300px;height:300px;">
                     </div>
                 </div>
@@ -199,20 +195,19 @@
             <div class="d-flex justify-content-center m-0 p-0">
                 <ul class="social">
                     <li>
-                        <a href="https://www.linkedin.com/in/juliana-souza-46a36b197/" target="_blank">
+                        <a href="https://www.linkedin.com/in/thiago-fonseca-5916151b8/" target="_blank">
                             <i class="bi bi-linkedin icon m-0"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/ThiagooFonseca" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora apaixonada pelo Back-end e estudante de Análise e
-                Desenvolvimento de Sistemas!</p>
+            <p class="card-text text-center">Desenvolvedor Java FullStack e cursando Gestão Tecnologia da Informação!</p>
         </div>
 
     </div>
@@ -228,10 +223,10 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img class="img" src="https://i.imgur.com/ryHfGEx.png" alt="" style="width:300px;height:300px;">
+                        <img class="img" src="https://i.imgur.com/1wbATCb.jpg" alt="" style="width:300px;height:300px;">
                     </div>
                     <div class="flip-card-back">
-                        <img class="img" src="https://i.imgur.com/lcyuPcs.png?1" alt=""
+                        <img class="img" src="https://i.imgur.com/nUqmlzF.jpg?1" alt=""
                             style="width:300px;height:300px;">
                     </div>
                 </div>
@@ -240,20 +235,19 @@
             <div class="d-flex justify-content-center m-0 p-0">
                 <ul class="social">
                     <li>
-                        <a href="https://www.linkedin.com/in/juliana-souza-46a36b197/" target="_blank">
+                        <a href="https://www.linkedin.com/in/vinicius-bmuniz/" target="_blank">
                             <i class="bi bi-linkedin icon m-0"></i>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/JulianaR23" target="_blank">
+                        <a href="https://github.com/Vinicius-bmuniz" target="_blank">
                             <i class="bi bi-github icon "></i>
                         </a>
                     </li>
                 </ul>
             </div>
-            <p class="card-text text-center">Desenvolvedora apaixonada pelo Back-end e estudante de Análise e
-                Desenvolvimento de Sistemas!</p>
+            <p class="card-text text-center">Desenvolvedor Java Fullstack, apaixonado pelo empreendedorismo, tecnologia e finanças!</p>
         </div>
 
     </div>
